SIMD Intrinsics Fortran bindings/GMS_avx512_wrappers_.h

// Compile it as a C-code

    // Interoperable with corresponding Fortran derived type

        typedef struct __attribute__((align(64))) v8f64 {
                 double v[8];
        }v8f64;
	v8f64  v8f64_maskz_sqrt_pd(unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_sqrt_round_pd(v8f64, unsigned char, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_sqrt_round_pd(unsigned char, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_expandloadu_pd(v8f64, unsigned char, void *)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_load_pd(v8f64, unsigned char, void *)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_load_pd(unsigned char, void *)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_loadu_pd(v8f64, unsigned char, void *)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_loadu_pd(unsigned char, void * )
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_getexp_pd(v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_getexp_pd(v8f64, unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_getexp_pd(unsigned char, v8f64)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_getexp_round_pd(v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_getexp_round_pd(v8f64, unsigned char, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_getexp_round_pd(unsigned char, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_getmant_pd(v8f64, int, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_getmant_pd(v8f64, unsigned char, v8f64, int, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_getmant_pd(unsigned char, v8f64, int, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_getmant_round_pd(v8f64, int, int, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_getmant_round_pd(v8f64, unsigned char, v8f64, int, int, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_maskz_getmant_round_pd(unsigned char, v8f64, int, int, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_roundscale_pd(v8f64, unsigned char, v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
        v8f64  v8f64_maskz_roundscale_pd(unsigned char, v8f64, int)
                                          __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_roundscale_pd(v8f64, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));
	v8f64  v8f64_mask_roundscale_round_pd(v8f64, unsigned char, v8f64, int, int)
	                                  __attribute__((noinline))
                                          __attribute__((hot))
				          __attribute__((regcall))
				          __attribute__((aligned(32)));