SIMD Intrinsics Fortran bindings/GMS_avx512_bindings.f90


        interface
           function v8f64_maskz_sqrt_pd(k,a) &
                bind(c,name='v8f64_maskz_sqrt_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                type(v8f64) :: v8f64_maskz_sqrt_pd
           end function v8f64_maskz_sqrt_pd
        end interface
         
        interface
           function v8f64_mask_sqrt_round_pd(src,k,a,rounding) &
                bind(c,name='v8f64_mask_sqrt_round_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                integer(c_int),  intent(in), value :: rounding
                type(v8f64) :: v8f64_mask_sqrt_round_pd
           end function v8f64_mask_sqrt_round_pd
        end interface

        interface
           function v8f64_maskz_sqrt_round_pd(k,a,rounding) &
                bind(c,name='v8f64_maskz_sqrt_round_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                integer(c_int),  intent(in), value :: rounding
                type(v8f64) :: v8f64_maskz_sqrt_round_pd
           end function v8f64_maskz_sqrt_round_pd
        end interface

        interface
           function v8f64_mask_expandloadu_pd(src,k,mem_addr) &
                bind(c,name='v8f64_mask_expandloadu_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(c_ptr),     intent(in), value :: mem_addr
                type(v8f64) :: v8f64_mask_expandloadu_pd
           end function v8f64_mask_expandloadu_pd
        end interface

        interface
           function v8f64_maskz_expandloadu_pd(k,mem_addr) &
                bind(c,name='v8f64_maskz_expandloadu_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(c_ptr),     intent(in), value :: mem_addr
                type(v8f64) :: v8f64_maskz_expandloadu_pd
           end function v8f64_maskz_expandloadu_pd
        end interface

        interface
           function v8f64_mask_load_pd(src,k,mem_addr) &
                bind(c,name='v8f64_mask_load_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(c_ptr),     intent(in), value :: mem_addr
                type(v8f64) :: v8f64_mask_load_pd
           end function v8f64_mask_load_pd
        end interface

        interface
           function v8f64_maskz_load_pd(k,mem_addr) &
                bind(c,name='v8f64_maskz_load_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(c_ptr),     intent(in), value :: mem_addr
                type(v8f64) :: v8f64_maskz_load_pd
           end function v8f64_maskz_load_pd
        end interface

         interface
           function v8f64_mask_loadu_pd(src,k,mem_addr) &
                bind(c,name='v8f64_mask_loadu_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(c_ptr),     intent(in), value :: mem_addr
                type(v8f64) :: v8f64_mask_loadu_pd
           end function v8f64_mask_loadu_pd
        end interface

        interface
           function v8f64_maskz_loadu_pd(k,mem_addr) &
                bind(c,name='v8f64_maskz_loadu_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(c_ptr),     intent(in), value :: mem_addr
                type(v8f64) :: v8f64_maskz_loadu_pd
           end function v8f64_maskz_loadu_pd
        end interface

        interface
           function v8f64_getexp_pd(a) &
                bind(c,name='v8f64_getexp_pd')
                import :: v8f64
                type(v8f64),  intent(in) :: a
                type(v8f64) :: v8f64_getexp_pd
           end function v8f64_getexp_pd
        end interface

        interface
           function v8f64_mask_getexp_pd(src,k,a) &
                bind(c,name='v8f64_mask_getexp_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in), value :: a
                type(v8f64) :: v8f64_mask_getexp_pd
           end function v8f64_mask_getexp_pd
        end interface

        interface
           function v8f64_maskz_getexp_pd(k,a) &
                bind(c,name='v8f64_maskz_getexp_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in), value :: a
           end function v8f64_maskz_getexp_pd
        end interface

        interface
           function v8f64_getexp_round_pd(a,rounding) &
                bind(c,name='v8f64_getexp_round_pd')
                import :: v8f64
                type(v8f64),    intent(in)        :: a
                integer(c_int), intent(in), value :: rounding
                type(v8f64) :: v8f64_getexp_round_pd
           end function v8f64_getexp_round_pd
        end interface

        interface
           function v8f64_mask_getexp_round_pd(src,k,a,rounding) &
                bind(c,name='v8f64_mask_getexp_round_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                integer(c_int),  intent(in), value :: rounding
                type(v8f64) :: v8f64_mask_getexp_round_pd
            end function v8f64_mask_getexp_round_pd
        end interface

        interface
           function v8f64_maskz_getexp_round_pd(k,a,rounding) &
                bind(c,name='v8f64_maskz_getexp_round_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                integer(c_int),  intent(in), value :: rounding
                type(v8f64) :: v8f64_maskz_getexp_round_pd
           end function v8f64_maskz_getexp_round_pd
        end interface

        interface
           function v8f64_getmant_pd(a,interv,sc) &
                bind(c,name='v8f64_getmant_pd')
                import :: v8f64
                type(v8f64),    intent(in)        :: a
                integer(c_int), intent(in), value :: interv
                integer(c_int), intent(in), value :: sc
                type(v8f64) :: v8f64_getmant_pd
           end function v8f64_getmant_pd
        end interface

        interface
           function v8f64_mask_getmant_pd(src,k,a,interv,sc) &
                bind(c,name='v8f64_mask_getmant_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                integer(c_int), intent(in),  value :: interv
                integer(c_int), intent(in),  value :: sc
                type(v8f64) :: v8f64_mask_getmant_pd
           end function v8f64_mask_getmant_pd
        end interface

        interface
           function v8f64_maskz_getmant_pd(k,a,interv,sc) &
                bind(c,name='v8f64_maskz_getmant_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                integer(c_int), intent(in),  value :: interv
                integer(c_int), intent(in),  value :: sc
                type(v8f64) :: v8f64_maskz_getmant_pd
           end function v8f64_maskz_getmant_pd
        end interface

        interface
           function v8f64_getmant_round_pd(a,interv,sc,rounding) &
                bind(c,name='v8f64_getmant_round_pd')
                import :: v8f64
                type(v8f64),    intent(in)        :: a
                integer(c_int), intent(in), value :: interv
                integer(c_int), intent(in), value :: sc
                integer(c_int), intent(in), value :: rounding
                type(v8f64) :: v8f64_getmant_round_pd
           end function v8f64_getmant_round_pd
        end interface

        interface
           function v8f64_mask_getmant_round_pd(src,k,a,interv,sc,rounding) &
                bind(c,name='v8f64_mask_getmant_round_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                integer(c_int),  intent(in), value :: interv
                integer(c_int),  intent(in), value :: sc
                integer(c_int),  intent(in), value :: rounding
                type(v8f64) :: v8f64_mask_getmant_round_pd
            end function v8f64_mask_getmant_round_pd
        end interface

        interface
           function v8f64_maskz_getmant_round_pd(k,a,interv,sc,rounding) &
                bind(c,name='v8f64_maskz_getmant_round_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                integer(c_int),  intent(in), value :: interv
                integer(c_int),  intent(in), value :: sc
                integer(c_int),  intent(in), value :: rounding
                type(v8f64) :: v8f64_maskz_getmant_round_pd
           end function v8f64_maskz_getmant_round_pd
        end interface

        interface
           function v8f64_mask_roundscale_pd(src,k,a,imm8) &
                bind(c,name='v8f64_mask_roundscale_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                integer(c_int),  intent(in), value :: imm8
                type(v8f64) :: v8f64_mask_roundscale_pd
           end function v8f64_mask_roundscale_pd
        end interface

        interface
           function v8f64_maskz_roundscale_pd(k,a,imm8) &
                bind(c,name='v8f64_maskz_roundscale_pd')
                import :: v8f64
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                integer(c_int),  intent(in), value :: imm8
                type(v8f64) :: v8f64_maskz_roundscale_pd
           end function v8f64_maskz_roundscale_pd
        end interface

        interface
           function v8f64_roundscale_pd(a,imm) &
                bind(c,name='v8f64_roundscale_pd')
                import :: v8f64
                type(v8f64),    intent(in)        :: a
                integer(c_int), intent(in), value :: imm8
                type(v8f64) :: v8f64_roundscale_pd
           end function v8f64_roundscale_pd
        end interface

        interface
           function v8f64_mask_roundscale_round_pd(src,k,a,imm8,rounding) &
                bind(c,name='v8f64_mask_roundscale_round_pd')
                import :: v8f64
                type(v8f64),     intent(in)        :: src
                integer(c_char), intent(in), value :: k
                type(v8f64),     intent(in)        :: a
                integer(c_int),  intent(in), value :: imm8
                integer(c_int),  intent(in), value :: rounding
                type(v8f64) :: v8f64_mask_roundscale_round_pd
           end function v8f64_mask_roundscale_round_pd
        end interface
